# T-Display-S3-Long

./: .gitignore  platformio.ini
.git.bak-20250915-114801/: AUTO_MERGE  COMMIT_EDITMSG  FETCH_HEAD  MERGE_MSG  config  index
.git.bak-20250915-114801/logs/: HEAD
.git.bak-20250915-114801/logs/refs/heads/: master
.git.bak-20250915-114801/objects/pack/: pack-2891d05217b9eeadda23befaa0efe052216dfe73.idx  pack-2891d05217b9eeadda23befaa0efe052216dfe73.rev  pack-c2a0efb6db4c71748323a36ed81be5c0480b371a.idx  pack-c2a0efb6db4c71748323a36ed81be5c0480b371a.rev
.git.bak-20250915-114801/rebase-merge/: author-script  done  git-rebase-todo.backup  patch  stopped-sha
.git.bak-20250915-114801/refs/remotes/origin/: master
examples/factory/: factory.ino
examples/lvgl_demo/: gravimetric.ino  lvgl_demo.ino
lib/: lv_conf.h
lib/AcaiaArduinoBLE/: .piopm  AcaiaArduinoBLE.cpp  AcaiaArduinoBLE.h
lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
lib/ui/src/components/: ui_comp_hook 2.c
lib/ui/src/images/: ui_img_1111506397.c  ui_img_1233654078.c  ui_img_1495795081.c  ui_img_1530343224.c  ui_img_1544916161.c  ui_img_1683789101.c  ui_img_1992534686.c  ui_img_2089747144.c  ui_img_2251575.c  ui_img_249472744.c  ui_img_420894227.c  ui_img_515815694.c  ui_img_806972598.c  ui_img_80803761.c  ui_img_951525100.c  ui_img_97407014.c  ui_img_light_png.c  ui_img_return_png.c  ui_img_setting_png.c  ui_img_timer_png.c  ui_img_weight_png.c
lib/ui/src/screens/: ui_MainScreen.c  ui_SettingScreen.c
(+4 files in other folders)
